Corrects overflow in announcements

--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,9 @@
     --mainbackground-color: #6b21a8;
 }
 
+* {
+    box-sizing: border-box;
+}
 body{
     margin: 0px;
     font-family: 'Roboto', sans-serif;
@@ -17,7 +20,7 @@ p {
 
 .container{
     display: grid;
-    grid-template-columns: 1fr minmax(500px,5fr);
+    grid-template-columns: clamp(230px,20%,250px) minmax(500px,5fr);
     grid-template-rows: 0.8fr 5fr;
 }
 
@@ -45,6 +48,10 @@ p {
     font-size: 1.5rem;
 }
 
+.dashboardTitle svg {
+    flex-shrink: 0;
+}
+
 .middleMenu,
 .lowerMenu{
     display: flex;
@@ -58,7 +65,8 @@ p {
 .header {
     display: grid;
     /* grid-template-columns: 4fr 2fr; */
-    grid-template-columns: minmax(400px,800px) 2fr;
+    /* grid-template-columns: minmax(400px,800px) 2fr; */
+    grid-template-columns: minmax(400px,800px) max(350px, 40%);
     gap: 1rem 0rem;
     background-color: #d8b4fe;
     padding: 15px 20px;
@@ -75,6 +83,7 @@ p {
     align-items: center;
     justify-content: center;
     gap: 1.5rem;
+    width: 100%;
 }
 .profilePic{
     width: 45px;
@@ -153,18 +162,12 @@ main{
 
 .projectsContainer {
     display: grid;
-    /* change this to auto-fit, minmax()   */
-    /* grid-template-columns: repeat(2,1fr); */
-    /* same as minmax(350px,1fr) */
-    /* grid-template-columns: repeat(auto-fit,minmax(21.875rem, 1fr)); */
-    grid-template-columns: repeat(auto-fit,minmax(21.875rem, 1fr));
-    /* grid-template-columns: repeat(auto-fit,clamp(150px,1fr,400px)); */
+    grid-template-columns: repeat(auto-fit,minmax(21.875rem, 1fr)); /*el que mejor sirve hasta ahora*/
     gap: 1.1rem;
     grid-row: 1 / 3;
 }
 
 .card{
-    /* border: 2px solid yellowgreen; */
     display: flex;
     flex-direction: column;
     background-color: #faf5ff;
@@ -176,7 +179,6 @@ main{
 
 .card:hover {
     background-image: linear-gradient(#faf5ff,#e8cbff);
-    /* background: #e9d4ff; */
     cursor: pointer;
     border-color: #faf5ff;
     box-shadow: 2px 5px 20px 2px #a6a2aa;
@@ -188,8 +190,6 @@ main{
 }
 
 .iconHolder {
-    /* position: relative;
-    top: 1.5rem; */
     margin-top: 1.5rem;
     display: flex;
     width: 50%;
@@ -236,11 +236,19 @@ main{
     /* white-space: nowrap;
     overflow: hidden; */
     text-overflow: ellipsis;
+    /* justify-content: space-around; */
+    height: max-content;
 }
 
 .announcement {
     border-bottom: 1px solid #a6a2aa;
     padding-bottom: 0.8rem;
+    width: 100%;
+}
+.announcement p,
+.announcement h3 {
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .announcementTitle{
